# digital_inputs_detector

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DigitalEdgeDetector.h  DigitalInputDetector.cpp  DigitalInputDetector.h  IOReaderJson.hpp  IOReader_Remot.hpp  Makefile  RemoteIOState.h  RemoteReader.hpp  SharedState.h  TestIOReader.hpp  build.sh  build_and_run.bat  main.cpp  qp_config.hpp  run.bat  signals.h  test_DigitalEdgeDetector.cpp  test_DigitalInputDetector.cpp  test_system.cpp
.devcontainer/: Dockerfile  devcontainer.json
Control/: Control.cpp  Control.h
DigitalEdgeDetector/: DigitalEdgeDetector.cpp  DigitalEdgeDetector.h  InputConfig.h
HttpServer/: HttpServer.cpp  HttpServer.h  WsPublisher.cpp  WsPublisher.h
IOStateMonitor/: IOStateMonitor.cpp  IOStateMonitor.h
Monitor/: Monitor.cpp  Monitor.h
RemoteIO/: IOReader_Remot.hpp
Test/: TestController.hpp
docs/: claude_code_layers.drawio  digital_edge_detector.drawio  drawio-conventions.md  io_state_monitor.drawio  notas.md  openapi.yaml  qpcpp-architecture.md  sistema.drawio  sistema2.drawio  sistema_backup.drawio
mongoose/: mongoose.c  mongoose.h
web/: gen_html_header.sh  index.html  index_backup.html
